force-app/main/default/objects/ProcessDeactivation__c/ProcessDeactivation__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings to disable various automated processes - validation rules,Triggers and Flows</description>
    <label>Process Deactivation</label>
</CustomObject>