force-app/main/default/objects/ProcessDeactivation__c/fields/Disable_All_Flows__c.field-meta.xml
<CustomField>
    <fullName>Disable_All_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable all Flows (Flows need to be implemented to check this custom setting to have any effect)</description>
    <inlineHelpText>Disable all Flows</inlineHelpText>
    <label>Disable All Flows</label>
    <type>Checkbox</type>
</CustomField>