force-app/main/default/objects/ProcessDeactivation__c/fields/Disable_Email_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Disable_Email_Alerts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable email alerts (assumes workflow rules or Flow check this field)</description>
    <inlineHelpText>Disable email alerts (workflow rules or Flows need to be implemented to check this custom setting to have any effect)</inlineHelpText>
    <label>Disable Email Alerts</label>
    <type>Checkbox</type>
</CustomField>