force-app/main/default/objects/ProcessDeactivation__c/fields/Disable_Flows__c.field-meta.xml
<CustomField>
    <fullName>Disable_Flows__c</fullName>
    <description>Disable specified Flows. Flow&apos;s names should be comma separated.</description>
    <inlineHelpText>Disable specified Flows. Flow&apos;s names should be comma separated.</inlineHelpText>
    <label>Disable Flows</label>
    <type>TextArea</type>
</CustomField>