force-app/main/default/objects/ProcessDeactivation__c/fields/Disable_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_Triggers__c</fullName>
    <description>Disable specified triggers (assumes triggers are implemented using our TriggerHandler framework). Trigger names should be comma separated.</description>
    <inlineHelpText>Disable specified triggers (assumes triggers are implemented using our TriggerHandler framework). Trigger names should be comma separated.</inlineHelpText>
    <label>Disable Triggers</label>
    <type>TextArea</type>
</CustomField>