force-app/main/default/objects/ProcessDeactivation__c/fields/Disable_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Disable_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable validation rules (assumes validation rules check this field)</description>
    <inlineHelpText>Disable validation rules (validation rules need to be implemented to check this custom setting to have any effect)</inlineHelpText>
    <label>Disable Validation Rules</label>
    <type>Checkbox</type>
</CustomField>